--- a/index.html
+++ b/index.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scopri Venezia</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Scopri Venezia</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 </head>
 <body>
-    <div id="map"></div>
-    <script src="https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.js"></script>
-    <script src="script.js"></script>
+  <div id="app">
+    <div id="map-container">
+      <div id="map">Mappa in caricamento...</div>
+    </div>
+
+    <div id="tabs">
+      <button onclick="showSection('cibo')">🍝 Cibo</button>
+      <button onclick="showSection('musei')">🖼️ Musei</button>
+      <button onclick="showSection('home')">🗺️ Mappa</button>
+      <button onclick="showSection('trasporti')">🚤 Trasporti</button>
+      <button onclick="showSection('negozi')">🛍️ Negozi</button>
+    </div>
+
+    <div id="content"></div>
+  </div>
+
+  <script src="data.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
+
