--- a/index.html
+++ b/index.html
@@ -22,11 +22,23 @@
       <button onclick="showSection('negozi')">🛍️ Negozi</button>
     </div>
 
+    <input id="searchInput" placeholder="Cerca per nome o categoria" />
+
     <div id="content"></div>
   </div>
 
+  <!-- Pulsante Home con icona -->
+  <button id="btnHome" onclick="showSection('home')">
+    <img src="C:\Users\reception2\Desktop\venice.png" alt="Home" />
+  </button>
+
   <script src="data.js"></script>
   <script src="script.js"></script>
+
+  <!-- Footer con attribuzione icona -->
+  <footer>
+    <p>Icona del Leone di San Marco creata da Chanut-is-Industries - Flaticon (https://www.flaticon.com/free-icons/venezia)</p>
+  </footer>
 </body>
 </html>
 
