--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <!-- Pulsante Home con icona -->
   <button id="btnHome" onclick="showSection('home')">
-    <img src="C:\Users\reception2\Desktop\venice.png" alt="Home" />
+    <img src=" " alt="Home" />
   </button>
 
   <script src="data.js"></script>
